<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FreeSearch</string>
    <string name="search_hint">Search anything…</string>
    <string name="settings_title">Settings</string>
    <string name="engine_label">Search Engine</string>
    <string name="theme_label">Theme</string>
    <string name="clear_history">Clear Search History</string>
    <string name="about">About</string>
    <string name="version">Version %1$s</string>
    <string name="no_results">No results found</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="search_engine_duckduckgo">DuckDuckGo</string>
    <string name="search_engine_brave">Brave Search</string>
    <string name="search_engine_startpage">Startpage</string>
    <string name="search_engine_qwant">Qwant</string>
    <string name="search_engine_custom">Custom URL</string>
    <string name="custom_url_hint">Enter search engine URL</string>
    <string name="home_title">FreeSearch</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="copy_link">Copy Link</string>
    <string name="share">Share</string>
</resources>
